<resources>
    <string name="app_name">Morse Messenger</string>
    <string name="title_activity_settings">Settings</string>

    <string name="attempts_text">Attempting to connect</string>
    <string name="attempts_text_placeholder">Attempt %1$d of %2$d</string>
    <string name="attempts_failed">Failed to connect</string>

    <string name="dev_start">Tap 3 more times to enable developer mode</string>
    <string name="dev_end">Developer mode has been enabled</string>
    <!-- Strings related to Settings -->

    <!-- General settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_title_connection">Connection</string>

    <string name="pref_title_host">Host URI</string>
    <string name="pref_default_host">tcp://127.0.0.1:8484</string>
    <string name="pref_hint_host">tcp://127.0.0.1:8484</string>

    <string name="pref_title_output">Output</string>

    <string-array name="pref_entries_lists">
        <item>Me</item>
        <item>Others</item>
        <item>All</item>
        <item>Off</item>
    </string-array>

    <string-array name="pref_entry_values_lists">
        <item>Me</item>
        <item>Others</item>
        <item>All</item>
        <item>Off</item>
    </string-array>

    <string name="pref_title_flash">Flash Screen</string>

    <string name="pref_title_sound">Sound</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Info -->

    <string name="pref_header_info">Info</string>

    <string name="pref_title_info">Info</string>

    <string name="pref_title_author">Author: ProWolf</string>
    <string name="pref_title_version">Version: v0.5.0</string>
    <string name="pref_title_git">GitHub Repository: https://github.com/prowolf/morse-messenger</string>

</resources>
