<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_default_host"
        android:hint="@string/pref_hint_host"
        android:inputType="textUri"
        android:key="host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_host" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sound"
        android:title="@string/pref_title_sound" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="flash"
        android:title="@string/pref_title_flash" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
